--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-  </body>
+ 
+ 
 </html><!doctype html>
 <html lang="en">
   <head>
@@ -187,28 +188,30 @@ ll#footerImage {
   </div>
 </div>
 <div class="container-fluid contact-section py-5" id="contact">
-  <img srcset="" src="undraw_Contact_us_re_4qqt.png" alt="" class="img-fluid hero-image w-100" data-aos="slide-left">
-  <h3 class="text-center mb-4">Get In Touch</h3>
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <form action="submit_form.php" method="POST">
-        <div class="mb-3">
-          <label for="name" class="form-label">Full Name</label>
-          <input type="text" class="form-control" id="name" name="name" placeholder="Enter your full name" required>
-        </div>
-        <div class="mb-3">
-          <label for="email" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
-        </div>
-        <div class="mb-3">
-          <label for="message" class="form-label">Message</label>
-          <textarea class="form-control" id="message" name="message" rows="4" placeholder="Your message..." required></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary w-100">Send Message</button>
-      </form>
+  <img srcset="" src="undraw_Contact_us_re_4qqt.png" alt="" class="img-fluid hero-image w-100" data-aos="slide-left">Here’s the code separated into HTML and JavaScript files:
+  <div class="container-fluid contact-section py-5" id="contact">
+    <img src="undraw_Contact_us_re_4qqt.png" alt="" class="img-fluid hero-image w-100" data-aos="slide-left">
+    <h3 class="text-center mb-4">Get In Touch</h3>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <form id="contact-form">
+          <div class="mb-3">
+            <label for="name" class="form-label">Full Name</label>
+            <input type="text" class="form-control" id="name" name="name" placeholder="Enter your full name" required>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
+          </div>
+          <div class="mb-3">
+            <label for="message" class="form-label">Message</label>
+            <textarea class="form-control" id="message" name="message" rows="4" placeholder="Your message..." required></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary w-100">Send Message</button>
+        </form>
+      </div>
     </div>
   </div>
-</div>
 <footer>
   <img srcset="" src="wavex-logo.png" alt="" width="140" height="60" id="footerImage">
   <nav id="footer-links">
@@ -221,6 +224,9 @@ ll#footerImage {
     </ul>
   </nav>
 </footer>
+    <!-- EmailJS Script -->
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ljmt8zR5Sl1FzR0E4NgCXcxD4q9/7rYq9BQ1W5A9pRQgD/29R50sh5K7ujdZ/fMB" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
