--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WaveX Solutions</title>
+    <title>WaveX</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -188,7 +188,7 @@ ll#footerImage {
   </div>
 </div>
 <div class="container-fluid contact-section py-5" id="contact">
-  <img srcset="" src="undraw_Contact_us_re_4qqt.png" alt="" class="img-fluid hero-image w-100" data-aos="slide-left">Here’s the code separated into HTML and JavaScript files:
+  <img srcset="" src="undraw_Contact_us_re_4qqt.png" alt="" class="img-fluid hero-image w-100" data-aos="slide-left">
   <div class="container-fluid contact-section py-5" id="contact">
     <img src="undraw_Contact_us_re_4qqt.png" alt="" class="img-fluid hero-image w-100" data-aos="slide-left">
     <h3 class="text-center mb-4">Get In Touch</h3>
