--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 </html><!doctype html>
 <html lang="en">
   <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WaveX</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- SEO Optimization -->
+<meta name="description" content="WaveX - Transforming small businesses with innovative web development solutions. Create a professional online presence with WaveX.">
+<meta name="keywords" content="WaveX, web development, small business websites, professional web design, affordable websites, custom web development">
+<meta name="author" content="WaveX Team">
+<meta name="robots" content="index, follow">
+
+<!-- Social Media Metadata -->
+<meta property="og:title" content="WaveX - Professional Web Development Solutions">
+<meta property="og:description" content="Empowering small businesses with custom, affordable websites tailored to their needs.">
+<meta property="og:image" content="https://yourwebsite.com/images/wavex-logo.png">
+<meta property="og:url" content="https://yourwebsite.com">
+<meta property="og:type" content="website">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="WaveX - Custom Web Development">
+<meta name="twitter:description" content="Partner with WaveX to build websites that grow your business.">
+<meta name="twitter:image" content="https://yourwebsite.com/images/wavex-banner.png">
+
+<!-- Favicons -->
+<link rel="icon" href="https://yourwebsite.com/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="https://yourwebsite.com/apple-touch-icon.png">
+
+<!-- Additional Tags -->
+<meta name="theme-color" content="#0A74DA">
+<meta name="language" content="en">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="format-detection" content="telephone=no"><title>WaveX Solutions</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -188,7 +215,7 @@ ll#footerImage {
   </div>
 </div>
 <div class="container-fluid contact-section py-5" id="contact">
-  <img srcset="" src="undraw_Contact_us_re_4qqt.png" alt="" class="img-fluid hero-image w-100" data-aos="slide-left">
+  <img srcset="" src="undraw_Contact_us_re_4qqt.png" alt="" class="img-fluid hero-image w-100" data-aos="slide-left">Here’s the code separated into HTML and JavaScript files:
   <div class="container-fluid contact-section py-5" id="contact">
     <img src="undraw_Contact_us_re_4qqt.png" alt="" class="img-fluid hero-image w-100" data-aos="slide-left">
     <h3 class="text-center mb-4">Get In Touch</h3>
