--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 </html><!doctype html>
 <html lang="en">
   <head>
+   <title>WaveX</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -215,7 +216,7 @@ ll#footerImage {
   </div>
 </div>
 <div class="container-fluid contact-section py-5" id="contact">
-  <img srcset="" src="undraw_Contact_us_re_4qqt.png" alt="" class="img-fluid hero-image w-100" data-aos="slide-left">Here’s the code separated into HTML and JavaScript files:
+  <img srcset="" src="undraw_Contact_us_re_4qqt.png" alt="" class="img-fluid hero-image w-100" data-aos="slide-left">
   <div class="container-fluid contact-section py-5" id="contact">
     <img src="undraw_Contact_us_re_4qqt.png" alt="" class="img-fluid hero-image w-100" data-aos="slide-left">
     <h3 class="text-center mb-4">Get In Touch</h3>
